--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "export": "next export"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-phone-input-2": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
